--- a/templates/.stylelintrc.json
+++ b/templates/.stylelintrc.json
@@ -72,7 +72,7 @@
       true,
       {
         "ignoreAtRules": [
-          "tailwind"
+          "tailwind",
           "apply",
           "variants",
           "responsive",
